3.Semantic.Analysis/test/semanal/error/error4_2_3.mod
module fun;

function f(a : integer) : integer;
begin
    if (a > 5) then
        return a
    else
        return
    end;
    return -1
end f;

begin

end fun.
